--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,9 @@ name = "wasm-bridge"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+wasmtime = { version = "9.0.3" }
 
-[dependencies]
-wasmtime = { version = "9.0.3", optional = true }
-js-sys = { version = "0.3.63", optional = true }
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+js-sys = { version = "0.3.63" }
 
-[features]
-sys = ["wasmtime"]
-js = ["js-sys"]
