--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,4 @@ wasmtime = { version = "10.0.0" }
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 js-sys = { version = "0.3.64" }
 wasm-bindgen = "0.2.87"
-wat = { version = "1.0.66", optional = true }
-
-[target.'cfg(not(target_arch = "wasm32"))'.features]
-wat = ["wasmtime/wat"]
-
+wat = { version = "1.0.66" }
