--- a/tests/skeletons/no_bindgen_wat/host_sys/Cargo.toml
+++ b/tests/skeletons/no_bindgen_wat/host_sys/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-wasm-bridge = { path = "../../..", features = ["wat"] }
+wasm-bridge = { path = "../../.." }
