--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -28,5 +28,7 @@ jobs:
       - name: Install wasm-pack
         run: cargo install wasm-pack
 
+      - uses: actions/checkout@v3
+
       - name: Run tests
         run: cd tests && bash run_all_tests.sh
