Cache instance directory

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,6 +20,7 @@ jobs:
           path: |
             ~/.cargo
             ~/.rustup
+            ./tests/instance
           key: ${{ runner.os }}-installation
 
       - name: Install wasm32 target
