--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,12 @@ keywords = ["WASM", "wasmtime", "web"]
 categories = ["wasm", "web-programming"]
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-wasmtime = { version = "10.0.0" }
+wasmtime = { version = "10.0.1" }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 js-sys = { version = "0.3.64" }
 wasm-bindgen = "0.2.87"
 wat = { version = "1.0.66" }
+
+[features]
+component-model = ["wasmtime/component-model"]
