Split code into two crates in a workspace

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,21 +1,10 @@
-[package]
-name = "wasm-bridge"
-description = "Run WASM modules on desktop or on the web using wasmtime's API"
-version = "0.1.0"
-edition = "2021"
-exclude = [".github", ".vscode", ".gitignore", "tests"]
-repository = "https://github.com/kajacx/wasm-bridge"
-license = "MIT"
-keywords = ["WASM", "wasmtime", "web"]
-categories = ["wasm", "web-programming"]
+[workspace]
 
-[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-wasmtime = { version = "10.0.1" }
+members = [
+  "crates/wasm-bridge",
+  "crates/wasm-bridge-macros",
+]
 
-[target.'cfg(target_arch = "wasm32")'.dependencies]
-js-sys = { version = "0.3.64" }
-wasm-bindgen = "0.2.87"
-wat = { version = "1.0.66" }
-
-[features]
-component-model = ["wasmtime/component-model"]
+exclude = [
+  "tests/"
+]
