--- a/tests/skeletons/wit_components/host_sys/Cargo.toml
+++ b/tests/skeletons/wit_components/host_sys/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-wasm-bridge = { path = "../../..", features = ["component-model"] }
+wasm-bridge = { path = "../../../crates/wasm-bridge", features = ["component-model"] }
 wasmtime = { version = "10.0.1" }
