--- a/crates/wasm-bridge/Cargo.toml
+++ b/crates/wasm-bridge/Cargo.toml
@@ -11,6 +11,7 @@ categories = ["wasm", "web-programming"]
 
 [dependencies]
 wasm-bridge-macros = { path = "../wasm-bridge-macros" }
+anyhow = { version = "1.0.22" }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 wasmtime = { version = "10.0.1" }
