--- a/crates/wasm-bridge/Cargo.toml
+++ b/crates/wasm-bridge/Cargo.toml
@@ -19,6 +19,7 @@ wasmtime = { version = "10.0.1" }
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 js-sys = { version = "0.3.64" }
 wasm-bindgen = "0.2.87"
+wasm-bindgen-futures = { version = "0.4.37" }
 wat = { version = "1.0.66" }
 
 [features]
