--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Install wasm-pack
         run: cargo install wasm-pack
 
+      - name: Install wasm-tools
+        run: cargo install wasm-tools
+        
       - uses: actions/checkout@v3
 
       - name: Cache build folders
