--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,11 @@ members = [
 exclude = [
   "tests/"
 ]
+
+[workspace.package]
+version = "0.1.1"
+edition = "2021"
+repository = "https://github.com/kajacx/wasm-bridge"
+license = "MIT"
+keywords = ["WASM", "wasmtime", "web"]
+categories = ["wasm", "web-programming"]
