--- a/crates/wasm-bridge-js/Cargo.toml
+++ b/crates/wasm-bridge-js/Cargo.toml
@@ -1,11 +1,15 @@
 [package]
 name = "wasm-bridge-js"
 description = "js-sys implementation of wasmtime's API"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
+repository.workspace = true
+license.workspace = true
+keywords.workspace = true
+categories.workspace = true
 
 [dependencies]
-wasm-bridge-macros = { path = "../wasm-bridge-macros", optional = true }
+wasm-bridge-macros = { path = "../wasm-bridge-macros", version = "0.1.1", optional = true }
 js-sys = { version = "0.3.64" }
 wasm-bindgen = "0.2.87"
 wasm-bindgen-futures = { version = "0.4.37" }
