--- a/crates/wasm-bridge/Cargo.toml
+++ b/crates/wasm-bridge/Cargo.toml
@@ -1,19 +1,19 @@
 [package]
 name = "wasm-bridge"
 description = "Run WASM modules on desktop or on the web using wasmtime's API"
-version = "0.1.0"
-edition = "2021"
-exclude = [".github", ".vscode", ".gitignore", "tests"]
-repository = "https://github.com/kajacx/wasm-bridge"
-license = "MIT"
-keywords = ["WASM", "wasmtime", "web"]
-categories = ["wasm", "web-programming"]
+version.workspace = true
+edition.workspace = true
+repository.workspace = true
+license.workspace = true
+keywords.workspace = true
+categories.workspace = true
+
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 wasmtime = { version = "10.0.1" }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-wasm-bridge-js = { path = "../wasm-bridge-js" }
+wasm-bridge-js = { path = "../wasm-bridge-js", version = "0.1.1" }
 
 [features]
 component-model = ["wasmtime/component-model", "wasm-bridge-js/component-model"]
