--- a/crates/wasm-bridge-js/Cargo.toml
+++ b/crates/wasm-bridge-js/Cargo.toml
@@ -15,6 +15,7 @@ wasm-bindgen = "0.2.87"
 wasm-bindgen-futures = { version = "0.4.37" }
 anyhow = { version = "1.0.22" }
 wat = { version = "1.0.66" }
+wasmtime-component-macro = { version = "10.0.1" }
 
 [features]
 component-model = ["wasm-bridge-macros"]
