--- a/crates/wasm-bridge-macros/Cargo.toml
+++ b/crates/wasm-bridge-macros/Cargo.toml
@@ -8,6 +8,8 @@ license.workspace = true
 keywords.workspace = true
 categories.workspace = true
 
-
 [lib]
 proc-macro = true
+
+[dependencies]
+wasmtime-component-macro = { version = "10.0.1" }
