--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Install wasm-tools
         run: cargo install wasm-tools
-        
+
       - uses: actions/checkout@v3
 
       - name: Cache build folders
@@ -41,6 +41,9 @@ jobs:
             tests/instance
             Cargo.lock
           key: ${{ runner.os }}-build-folders
+
+      - name: Check formatting
+        run: cargo fmt --all -- --check
 
       - name: Check compile warnings
         env:
