--- a/crates/wasm-bridge-js/Cargo.toml
+++ b/crates/wasm-bridge-js/Cargo.toml
@@ -9,14 +9,13 @@ keywords.workspace = true
 categories.workspace = true
 
 [dependencies]
-wasm-bridge-macros = { path = "../wasm-bridge-macros", version = "0.1.1", optional = true }
 js-sys = { version = "0.3.64" }
 wasm-bindgen = "0.2.87"
 wasm-bindgen-futures = { version = "0.4.37" }
-anyhow = { version = "1.0.22" }
 wat = { version = "1.0.66" }
-wasmtime-component-macro = { version = "10.0.1", optional = true }
+wasm-bridge-macros = { path = "../wasm-bridge-macros", version = "0.1.1", optional = true }
+anyhow = { version = "1.0.22", optional = true }
 zip = { version = "0.6.6", default-features = false, features = ["deflate"], optional = true }
 
 [features]
-component-model = ["wasm-bridge-macros", "wasmtime-component-macro", "zip"]
+component-model = ["wasm-bridge-macros", "zip", "anyhow"]
