--- a/crates/wasm-bridge-macros/Cargo.toml
+++ b/crates/wasm-bridge-macros/Cargo.toml
@@ -12,4 +12,10 @@ categories.workspace = true
 proc-macro = true
 
 [dependencies]
-wasmtime-component-macro = { version = "10.0.1" }
+anyhow = "1.0"
+proc-macro2 = "1.0"
+quote = "1.0"
+syn = { version = "1.0", features = ["extra-traits"] }
+wasmtime-component-util = { version = "10.0.1" }
+wasmtime-wit-bindgen = { version = "10.0.1" }
+wit-parser = { version = "0.8.0" }
