--- a/crates/wasm-bridge-macros/Cargo.toml
+++ b/crates/wasm-bridge-macros/Cargo.toml
@@ -4,7 +4,7 @@ description = "Helper crate to define proc macros for wasm-bridge"
 version.workspace = true
 edition.workspace = true
 repository.workspace = true
-license.workspace = true
+license = "Apache-2.0 WITH LLVM-exception"
 keywords.workspace = true
 categories.workspace = true
 
@@ -19,3 +19,4 @@ syn = { version = "1.0", features = ["extra-traits"] }
 wasmtime-component-util = { version = "10.0.1" }
 wasmtime-wit-bindgen = { version = "10.0.1" }
 wit-parser = { version = "0.8.0" }
+regex = "1.8"
