--- a/crates/wasm-bridge-js/Cargo.toml
+++ b/crates/wasm-bridge-js/Cargo.toml
@@ -16,6 +16,7 @@ wat = { version = "1.0.66" }
 wasm-bridge-macros = { path = "../wasm-bridge-macros", version = "0.1.1", optional = true }
 anyhow = { version = "1.0.22", optional = true }
 zip = { version = "0.6.6", default-features = false, features = ["deflate"], optional = true }
+heck = { version = "0.4.1" }
 
 [features]
 component-model = ["wasm-bridge-macros", "zip", "anyhow"]
