--- a/crates/wasm-bridge/Cargo.toml
+++ b/crates/wasm-bridge/Cargo.toml
@@ -11,9 +11,10 @@ categories.workspace = true
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 wasmtime = { version = "10.0.1" }
+wasm-bridge-macros = { path = "../wasm-bridge-macros", version = "0.1.1", optional = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bridge-js = { path = "../wasm-bridge-js", version = "0.1.1" }
 
 [features]
-component-model = ["wasmtime/component-model", "wasm-bridge-js/component-model"]
+component-model = ["wasmtime/component-model", "wasm-bridge-macros", "wasm-bridge-js/component-model"]
