Move wat support into a default feature

--- a/tests/skeletons/wit_components/host_js/Cargo.toml
+++ b/tests/skeletons/wit_components/host_js/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-wasm-bridge = { path = "../../../crates/wasm-bridge", features = ["component-model"] }
+wasm-bridge = { path = "../../../crates/wasm-bridge", default-features = false, features = ["component-model"] }
 
 [dev-dependencies]
 wasm-bindgen-test = { version = "0.3.37" }
