--- a/crates/wasm-bridge-js/Cargo.toml
+++ b/crates/wasm-bridge-js/Cargo.toml
@@ -12,7 +12,7 @@ categories.workspace = true
 js-sys = { version = "0.3.64" }
 wasm-bindgen = "0.2.87"
 wasm-bindgen-futures = { version = "0.4.37" }
-wat = { version = "1.0.66" }
+wat = { version = "1.0.66", optional = true }
 wasm-bridge-macros = { path = "../wasm-bridge-macros", version = "0.1.3", optional = true }
 anyhow = { version = "1.0.22", optional = true }
 zip = { version = "0.6.6", default-features = false, features = ["deflate"], optional = true }
