--- a/crates/wasm-bridge/Cargo.toml
+++ b/crates/wasm-bridge/Cargo.toml
@@ -10,11 +10,13 @@ categories.workspace = true
 
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-wasmtime = { version = "10.0.1" }
+wasmtime = { version = "10.0.1", default-features = false, features = ["cranelift"] }
 wasm-bridge-macros = { path = "../wasm-bridge-macros", version = "0.1.3", optional = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bridge-js = { path = "../wasm-bridge-js", version = "0.1.3" }
 
 [features]
+default = ["wat"]
 component-model = ["wasmtime/component-model", "wasm-bridge-macros", "wasm-bridge-js/component-model"]
+wat = ["wasmtime/wat", "wasm-bridge-js/wat"]
