--- a/tests/skeletons/no_bindgen/host_js/Cargo.toml
+++ b/tests/skeletons/no_bindgen/host_js/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-wasm-bridge = { path = "../../../crates/wasm-bridge" }
+wasm-bridge = { path = "../../../../crates/wasm-bridge" }
 
 [dev-dependencies]
 wasm-bindgen-test = { version = "0.3.37" }
