--- a/crates/wasm-bridge-macros/Cargo.toml
+++ b/crates/wasm-bridge-macros/Cargo.toml
@@ -20,3 +20,4 @@ wasmtime-component-util = { version = "10.0.1" }
 wasmtime-wit-bindgen = { version = "10.0.1" }
 wit-parser = { version = "0.8.0" }
 regex = "1.8"
+heck = "0.4"
