--- a/tests/skeletons/no_bindgen/guest/Cargo.toml
+++ b/tests/skeletons/no_bindgen/guest/Cargo.toml
@@ -1,10 +1,7 @@
 [package]
-name = "wit-components-plugin"
+name = "no-bindgen-guest"
 version = "0.1.0"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib"]
-
-[dependencies]
-wit-bindgen = "0.8.0"
