--- a/tests/skeletons/wit_components/guest/Cargo.toml
+++ b/tests/skeletons/wit_components/guest/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
-name = "no-bindgen-plugin"
+name = "wit-components-guest"
 version = "0.1.0"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib"]
+
+[dependencies]
+wit-bindgen = "0.8.0"
