Running jco works

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@
 members = [
   "crates/wasm-bridge",
   "crates/wasm-bridge-cli",
+  "crates/wasm-bridge-jco",
   "crates/wasm-bridge-js",
   "crates/wasm-bridge-macros",
 ]
