--- a/crates/wasm-bridge-js/Cargo.toml
+++ b/crates/wasm-bridge-js/Cargo.toml
@@ -16,9 +16,8 @@ wat = { version = "1.0.66", optional = true }
 wasm-bridge-macros = { path = "../wasm-bridge-macros", version = "0.1.6", optional = true }
 wasm-bridge-jco = { path = "../wasm-bridge-jco", version = "0.1.6", optional = true }
 anyhow = { version = "1.0.22" }
-zip = { version = "0.6.6", default-features = false, features = ["deflate"], optional = true }
 heck = { version = "0.4.1" }
 
 [features]
-component-model = ["wasm-bridge-macros", "wasm-bridge-jco", "zip"]
+component-model = ["wasm-bridge-macros", "wasm-bridge-jco"]
 error-logging = []
