--- a/crates/wasm-bridge/Cargo.toml
+++ b/crates/wasm-bridge/Cargo.toml
@@ -12,14 +12,12 @@ categories.workspace = true
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 wasmtime = { version = "11.0.0", default-features = false, features = ["cranelift"] }
 wasm-bridge-macros = { path = "../wasm-bridge-macros", version = "0.1.6", optional = true }
-zip = { version = "0.6.6", default-features = false, features = ["deflate"], optional = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bridge-js = { path = "../wasm-bridge-js", version = "0.1.6" }
 
 [features]
 default = ["wat", "error-logging"]
-component-model = ["component-model-no-universal", "zip"]
-component-model-no-universal = ["wasmtime/component-model", "wasm-bridge-macros", "wasm-bridge-js/component-model"]
+component-model = ["wasmtime/component-model", "wasm-bridge-macros", "wasm-bridge-js/component-model"]
 wat = ["wasmtime/wat", "wasm-bridge-js/wat"]
 error-logging = ["wasm-bridge-js/error-logging"]
