--- a/crates/wasm-bridge/Cargo.toml
+++ b/crates/wasm-bridge/Cargo.toml
@@ -12,12 +12,14 @@ categories.workspace = true
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 wasmtime = { version = "11.0.0", default-features = false, features = ["cranelift"] }
 wasm-bridge-macros = { path = "../wasm-bridge-macros", version = "0.2.0", optional = true }
+wasmtime-wasi = { version = "11.0.0", optional = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bridge-js = { path = "../wasm-bridge-js", version = "0.2.0" }
 
 [features]
 default = ["wat", "error-logging"]
-component-model = ["wasmtime/component-model", "wasm-bridge-macros", "wasm-bridge-js/component-model"]
 wat = ["wasmtime/wat", "wasm-bridge-js/wat"]
+component-model = ["wasmtime/component-model", "wasm-bridge-macros", "wasm-bridge-js/component-model"]
+wasi = ["wasmtime/async", "wasmtime-wasi", "wasm-bridge-macros/async", "wasm-bridge-js/wasi"]
 error-logging = ["wasm-bridge-js/error-logging"]
