--- a/crates/wasm-bridge/Cargo.toml
+++ b/crates/wasm-bridge/Cargo.toml
@@ -21,5 +21,6 @@ wasm-bridge-js = { path = "../wasm-bridge-js", version = "0.2.0" }
 default = ["wat", "error-logging"]
 wat = ["wasmtime/wat", "wasm-bridge-js/wat"]
 component-model = ["wasmtime/component-model", "wasm-bridge-macros", "wasm-bridge-js/component-model"]
-wasi = ["wasmtime/async", "wasmtime-wasi", "wasm-bridge-macros/async", "wasm-bridge-js/wasi"]
+async = ["wasmtime/async","wasm-bridge-macros/async" ]
+wasi = ["wasmtime-wasi",  "wasm-bridge-js/wasi", "async"]
 error-logging = ["wasm-bridge-js/error-logging"]
