--- a/crates/wasm-bridge-js/Cargo.toml
+++ b/crates/wasm-bridge-js/Cargo.toml
@@ -17,13 +17,12 @@ wasm-bridge-macros = { path = "../wasm-bridge-macros", version = "0.2.0", option
 wasm-bridge-jco = { path = "../wasm-bridge-jco", version = "0.2.0", optional = true }
 anyhow = { version = "1.0.22" }
 heck = { version = "0.4.1" }
-async-trait = { version = "0.1.72", optional = true }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.37"
 
 [features]
 component-model = ["wasm-bridge-macros", "wasm-bridge-jco"]
-async = ["wasm-bridge-macros/async", "async-trait"]
+async = ["wasm-bridge-macros/async"]
 wasi = ["async"]
 error-logging = []
