--- a/crates/wasm-bridge-js/Cargo.toml
+++ b/crates/wasm-bridge-js/Cargo.toml
@@ -14,7 +14,7 @@ wasm-bindgen = "0.2.87"
 wasm-bindgen-futures = { version = "0.4.37" }
 wat = { version = "1.0.66", optional = true }
 wasm-bridge-macros = { path = "../wasm-bridge-macros", version = "0.2.0", optional = true }
-wasm-bridge-jco = { path = "../wasm-bridge-jco", version = "0.2.0", optional = true }
+js-component-bindgen = { version = "0.9.5", optional = true }
 anyhow = { version = "1.0.22" }
 heck = { version = "0.4.1" }
 
@@ -22,7 +22,7 @@ heck = { version = "0.4.1" }
 wasm-bindgen-test = "0.3.37"
 
 [features]
-component-model = ["wasm-bridge-macros", "wasm-bridge-jco"]
+component-model = ["wasm-bridge-macros", "js-component-bindgen"]
 async = ["wasm-bridge-macros/async"]
 wasi = ["async"]
 error-logging = []
