--- a/crates/wasm-bridge-js/Cargo.toml
+++ b/crates/wasm-bridge-js/Cargo.toml
@@ -17,6 +17,7 @@ wasm-bridge-macros = { path = "../wasm-bridge-macros", version = "0.2.1", option
 js-component-bindgen = { version = "0.9.5", optional = true }
 anyhow = { version = "1.0.22" }
 heck = { version = "0.4.1" }
+rand_core = { version = "0.6.4", optional = true }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.37"
@@ -24,5 +25,5 @@ wasm-bindgen-test = "0.3.37"
 [features]
 component-model = ["wasm-bridge-macros", "js-component-bindgen"]
 async = ["wasm-bridge-macros/async"]
-wasi = ["async"]
+wasi = ["async", "rand_core"]
 error-logging = []
