--- a/tests/skeletons/wasi_components/host_js/Cargo.toml
+++ b/tests/skeletons/wasi_components/host_js/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 wasm-bridge = { path = "../../../crates/wasm-bridge", default-features = false, features = ["component-model", "wasi"] }
+rand_core = { version = "0.6.4" }
 
 [dev-dependencies]
 wasm-bindgen-test = { version = "0.3.37" }
