--- a/tests/skeletons/no_bindgen/host_sys/Cargo.toml
+++ b/tests/skeletons/no_bindgen/host_sys/Cargo.toml
@@ -5,3 +5,4 @@ edition = "2021"
 
 [dependencies]
 wasm-bridge = { path = "../../../crates/wasm-bridge", default-features = false, features = ["wat"] }
+tokio = { version = "1.29.1", features = ["macros", "rt"] }
