--- a/crates/wasm-bridge/Cargo.toml
+++ b/crates/wasm-bridge/Cargo.toml
@@ -10,9 +10,10 @@ categories.workspace = true
 
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-wasmtime = { version = "12.0.0", default-features = false, features = ["cranelift"] }
+wasmtime = { version = "13.0.0", git = "https://github.com/bytecodealliance/wasmtime", default-features = false, features = ["cranelift"] }
+wasmtime-wasi = { version = "13.0.0", git = "https://github.com/bytecodealliance/wasmtime", optional = true }
+
 wasm-bridge-macros = { path = "../wasm-bridge-macros", version = "0.2.2", optional = true }
-wasmtime-wasi = { version = "12.0.0", optional = true }
 async-trait = { version =  "0.1.73", optional = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
