feat: rust-analyzer supported examples

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
   "crates/wasm-bridge",
   "crates/wasm-bridge-js",
   "crates/wasm-bridge-macros",
+  "examples/wit_components/records/*"
 ]
 
 exclude = [
