wip: implement io traits in example

--- a/examples/wasi_components/io_redirect/host/Cargo.toml
+++ b/examples/wasi_components/io_redirect/host/Cargo.toml
@@ -7,4 +7,6 @@ version = "0.0.0"
 wasm-bridge = { path = "../../../../crates/wasm-bridge/",  default-features = false, features = ["component-model", "wasi"]}
 rand_core = { version = "0.6.4" }
 tokio = { version = "1.29.1", features = ["macros", "rt"] }
+async-trait = "0.1"
+bytes = "1.4"
 
