wip: flattened test structure

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,8 @@ members = [
   "crates/wasm-bridge",
   "crates/wasm-bridge-js",
   "crates/wasm-bridge-macros",
-  "examples/wit_components/*/*",
-  "examples/wasi_components/*/*",
+  "examples/wit_components/",
+  "examples/wit_components/records/",
 ]
 
 exclude = [
