--- a/crates/wasm-bridge-js/Cargo.toml
+++ b/crates/wasm-bridge-js/Cargo.toml
@@ -19,6 +19,7 @@ anyhow = { version = "1.0.22" }
 heck = { version = "0.4.1" }
 rand_core = { version = "0.6.4", optional = true }
 getrandom = { version = "0.2.10", optional = true }
+tracing = "0.1"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.37"
