feat: use arrays for record passing

--- a/examples/wit_components/Cargo.toml
+++ b/examples/wit_components/Cargo.toml
@@ -8,6 +8,7 @@ wasm-bridge = { path = "../../crates/wasm-bridge/",  features = ["component-mode
 wasm-bindgen-test = "0.3"
 
 [dev-dependencies]
+tracing = "0.1"
 tracing-web = "0.1"
 tracing-subscriber = { version = "0.3", features = ["time"] }
 wasm-bindgen-test = "0.3"
