--- a/crates/wasm-bridge-js/Cargo.toml
+++ b/crates/wasm-bridge-js/Cargo.toml
@@ -14,7 +14,7 @@ wasm-bindgen = "0.2.87"
 wasm-bindgen-futures = { version = "0.4.37" }
 wat = { version = "1.0.70", git = "https://github.com/bytecodealliance/wasm-tools", optional = true }
 wasm-bridge-macros = { path = "../wasm-bridge-macros", version = "0.2.2", optional = true }
-js-component-bindgen = { version = "0.9.5", optional = true }
+js-component-bindgen = { version = "0.11", optional = true , git = "https://github.com/AmbientRun/jco" }
 anyhow = { version = "1.0.22" }
 rand_core = { version = "0.6.4", optional = true }
 getrandom = { version = "0.2.10", optional = true }
