--- a/crates/wasm-bridge/Cargo.toml
+++ b/crates/wasm-bridge/Cargo.toml
@@ -10,8 +10,8 @@ categories.workspace = true
 
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-wasmtime = { version = "14.0.0", git = "https://github.com/bytecodealliance/wasmtime", rev = "9f00198611537c7a9b384c9f9e3db85e0ca15123", default-features = false, features = ["cranelift"] }
-wasmtime-wasi = { version = "14.0.0", git = "https://github.com/bytecodealliance/wasmtime", rev = "9f00198611537c7a9b384c9f9e3db85e0ca15123", optional = true }
+wasmtime = { version = "14.0.0", git = "https://github.com/bytecodealliance/wasmtime", branch = "release-14.0.0", default-features = false, features = ["cranelift"] }
+wasmtime-wasi = { version = "14.0.0", git = "https://github.com/bytecodealliance/wasmtime", branch = "release-14.0.0", optional = true }
 
 wasm-bridge-macros = { path = "../wasm-bridge-macros", version = "0.2.2", optional = true }
 async-trait = { version =  "0.1.73", optional = true }
