wip: use wasi from spec to make it easier staying up to date

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ resolver = "2"
 members = [
   "crates/wasm-bridge",
   "crates/wasm-bridge-js",
+  "crates/wasm-bridge-wasi",
   "crates/wasm-bridge-macros",
 
   "examples/wit_components/",
