--- a/crates/wasm-bridge-wasi/Cargo.toml
+++ b/crates/wasm-bridge-wasi/Cargo.toml
@@ -1,28 +1,27 @@
 [package]
-name = "wasm-bridge-js"
-description = "js-sys implementation of wasmtime's API"
+name = "wasm-bridge-wasi"
+description = "JavaScript bindings for WASI"
+edition = "2021"
 version.workspace = true
-edition.workspace = true
 repository.workspace = true
 license.workspace = true
 keywords.workspace = true
 categories.workspace = true
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 js-sys = { version = "0.3.64" }
 wasm-bindgen = "0.2.87"
 wasm-bindgen-futures = { version = "0.4.37" }
 wat = { version = "1.0.70", git = "https://github.com/bytecodealliance/wasm-tools", optional = true }
-wasm-bridge-macros = { path = "../wasm-bridge-macros", version = "0.2.2", optional = true }
+wasm-bridge-macros = { path = "../wasm-bridge-macros", version = "0.2.2" }
+wasm-bridge = { path = "../wasm-bridge/", version = "0.2", features = ["component-model"] }
+wasm-bridge-js = { path = "../wasm-bridge-js/", version = "0.2" }
 js-component-bindgen = { version = "0.11", optional = true , path = "../../jco/crates/js-component-bindgen/" }
 anyhow = { version = "1.0.22" }
+rand_core = { version = "0.6.4", features = ["getrandom"] }
+getrandom = { version = "0.2.10", features = ["js"] }
 tracing = "0.1"
 convert_case = "0.6.0"
 
-[dev-dependencies]
-wasm-bindgen-test = "0.3.37"
-
-[features]
-component-model = ["wasm-bridge-macros", "js-component-bindgen"]
-async = ["wasm-bridge-macros/async"]
-error-logging = []
