--- a/examples/wasi_components/Cargo.toml
+++ b/examples/wasi_components/Cargo.toml
@@ -4,7 +4,7 @@ edition.workspace = true
 version = "0.0.0"
 
 [dependencies]
-wasm-bridge = { path = "../../crates/wasm-bridge/",  features = ["component-model", "async", "wasi"]}
+wasm-bridge = { path = "../../crates/wasm-bridge/",  features = ["component-model", "async"]}
 wasm-bindgen-test = "0.3"
 bytes = "1.4"
 
