--- a/crates/wasm-bridge-js/Cargo.toml
+++ b/crates/wasm-bridge-js/Cargo.toml
@@ -19,6 +19,11 @@ anyhow = { version = "1.0.22" }
 tracing = "0.1"
 convert_case = "0.6.0"
 
+wit-component = "0.18"
+wasmtime-environ = { git = "https://github.com/bytecodealliance/wasmtime", features = ["component-model"] }
+wasmparser = "0.113"
+wit-parser = "0.13"
+
 [dev-dependencies]
 wasm-bindgen-test = "0.3.37"
 
