Prepare "direct bytes" feature

--- a/crates/wasm-bridge-js/Cargo.toml
+++ b/crates/wasm-bridge-js/Cargo.toml
@@ -27,3 +27,4 @@ component-model = ["wasm-bridge-macros", "js-component-bindgen"]
 async = ["wasm-bridge-macros/async"]
 wasi = ["async", "rand_core"]
 error-logging = []
+direct-bytes = ["wasm-bridge-macros/direct-bytes"]
