--- a/tests/skeletons/wit_components/host_js_bench/Cargo.toml
+++ b/tests/skeletons/wit_components/host_js_bench/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-wasm-bridge = { path = "../../../crates/wasm-bridge", default-features = false, features = ["component-model"] }
-#  wasm-bridge = { path = "../../../crates/wasm-bridge", default-features = false, features = ["component-model", "direct-bytes"] }
+# wasm-bridge = { path = "../../../crates/wasm-bridge", default-features = false, features = ["component-model"] }
+wasm-bridge = { path = "../../../crates/wasm-bridge", default-features = false, features = ["component-model", "direct-bytes"] }
 
 [dev-dependencies]
 wasm-bindgen-test = { version = "0.3.37" }
