--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -29,10 +29,10 @@ jobs:
         run: rustup target add wasm32-wasi
 
       - name: Install wasm-pack
-        run: cargo install wasm-pack
+        run: cargo install -f --version 0.12.1 wasm-pack
 
       - name: Install cargo component
-        run: cargo install --git https://github.com/bytecodealliance/cargo-component cargo-component
+        run: cargo install -f --version 0.6.0 cargo-component
 
       - uses: actions/checkout@v3
 
