--- a/crates/wasm-bridge/Cargo.toml
+++ b/crates/wasm-bridge/Cargo.toml
@@ -8,21 +8,18 @@ license.workspace = true
 keywords.workspace = true
 categories.workspace = true
 
-
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-wasmtime = { version = "15.0.0", default-features = false, features = ["cranelift"] }
-wasm-bridge-macros = { path = "../wasm-bridge-macros", version = "0.2.2", optional = true }
-wasmtime-wasi = { version = "15.0.0", optional = true }
-async-trait = { version =  "0.1.72", optional = true }
+wasmtime = { version = "15.0.0",  features = ["cranelift"] }
+wasm-bridge-macros = { workspace = true, optional = true }
+async-trait = { workspace = true, optional = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-wasm-bridge-js = { path = "../wasm-bridge-js", version = "0.2.2" }
+wasm-bridge-js = { workspace = true }
 
 [features]
 default = ["wat", "error-logging"]
 wat = ["wasmtime/wat", "wasm-bridge-js/wat"]
 component-model = ["wasmtime/component-model", "wasm-bridge-macros", "wasm-bridge-js/component-model"]
-async = ["wasmtime/async", "async-trait", "wasm-bridge-macros/async", "wasm-bridge-js/async"]
-wasi = ["wasmtime-wasi",  "wasm-bridge-js/wasi", "async"]
+async = ["wasmtime/async", "async-trait", "wasm-bridge-js/async", "wasm-bridge-macros/async"]
 error-logging = ["wasm-bridge-js/error-logging"]
 direct-bytes = ["wasm-bridge-js/direct-bytes"]
