--- a/crates/wasm-bridge-wasi-js/Cargo.toml
+++ b/crates/wasm-bridge-wasi-js/Cargo.toml
@@ -13,7 +13,7 @@ js-sys = { workspace = true }
 wasm-bindgen = { workspace = true }
 wasm-bindgen-futures = { workspace = true }
 rand_core = { workspace = true }
-wasm-bridge = { workspace = true, features = ["component-model"] }
+wasm-bridge = { workspace = true, features = ["component-model", "async"] }
 wasm-bridge-macros = { workspace = true }
 anyhow = { workspace = true }
 
