--- a/tests/skeletons/wasi_components/host_js/Cargo.toml
+++ b/tests/skeletons/wasi_components/host_js/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 wasm-bridge = { path = "../../../crates/wasm-bridge", default-features = false, features = ["component-model", "async"] }
 wasm-bridge-wasi = { path = "../../../crates/wasm-bridge-wasi" }
 rand_core = { version = "0.6" }
+bytes = { version = "1.5" }
 
 [dev-dependencies]
 wasm-bindgen-test = { version = "0.3" }
