--- a/tests/skeletons/wasi_components/host_sys/Cargo.toml
+++ b/tests/skeletons/wasi_components/host_sys/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 wasm-bridge = { path = "../../../crates/wasm-bridge", default-features = false, features = ["component-model", "async"] }
 wasm-bridge-wasi = { path = "../../../crates/wasm-bridge-wasi" }
 rand_core = { version = "0.6" }
+bytes = { version = "1.5" }
 tokio = { version = "1.0", features = ["macros", "rt"] }
