--- a/crates/wasm-bridge-wasi/Cargo.toml
+++ b/crates/wasm-bridge-wasi/Cargo.toml
@@ -9,7 +9,7 @@ keywords.workspace = true
 categories.workspace = true
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-wasmtime-wasi = { version = "15.0.0" }
+wasmtime-wasi = { workspace = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bridge-wasi-js = { workspace = true }
