Move wasm-bridge-wasi to a single crate
"Splitting" the sys code is easy enough that it's fine to keep it in the same crate. Also the Rust analyzer setting helps.

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Run wasi unit tests
         env:
           RUSTFLAGS: "-D warnings"
-        run: cd crates/wasm-bridge-wasi-js && wasm-pack test --node -- --all-features
+        run: cd crates/wasm-bridge-wasi && wasm-pack test --node -- --all-features
 
       - name: Check formatting
         env:
