--- a/crates/wasm-bridge-wasi/Cargo.toml
+++ b/crates/wasm-bridge-wasi/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wasm-bridge-wasi"
-description = "Expose wasmtime's wasi API on js targets"
+description = "js-sys implementation of wasmtime's wasi API"
 version.workspace = true
 edition.workspace = true
 repository.workspace = true
@@ -12,5 +12,14 @@ categories.workspace = true
 wasmtime-wasi = { workspace = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-wasm-bridge-wasi-js = { workspace = true }
+js-sys = { workspace = true }
+wasm-bindgen = { workspace = true }
+wasm-bindgen-futures = { workspace = true }
+rand_core = { workspace = true }
+bytes = { workspace = true }
+wasm-bridge = { workspace = true, features = ["component-model", "async"] }
+wasm-bridge-macros = { workspace = true }
+anyhow = { workspace = true }
 
+[dev-dependencies]
+wasm-bindgen-test = { workspace = true }
