--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,18 +26,18 @@ wasm-bridge = { path = "crates/wasm-bridge", version = "0.2.2" }
 wasm-bridge-js = { path = "crates/wasm-bridge-js", version = "0.2.2" }
 wasm-bridge-macros = { path = "crates/wasm-bridge-macros", version = "0.2.2" }
 
-wasmtime = { version = "15.0", features = ["cranelift"] }
-wasmtime-wasi = { version = "15.0" }
-wasmtime-component-util = { version = "15.0" }
-wasmtime-wit-bindgen = { version = "15.0" }
+wasmtime = { version = "15.0", default-features = false, features = ["cranelift"] }
+wasmtime-wasi = { version = "15.0", default-features = false, features = ["preview2"] }
+wasmtime-component-util = { version = "15.0", default-features = false }
+wasmtime-wit-bindgen = { version = "15.0", default-features = false }
 
-js-sys = { version = "0.3" }
-wasm-bindgen = { version = "0.2.89" } # See https://users.rust-lang.org/t/very-strange-trait-bounds-error/104028
-wasm-bindgen-futures = { version = "0.4" }
+js-sys = { version = "0.3", default-features = false }
+wasm-bindgen = { version = "0.2.89", default-features = false } # See https://users.rust-lang.org/t/very-strange-trait-bounds-error/104028
+wasm-bindgen-futures = { version = "0.4", default-features = false }
 wasm-bindgen-test = { version = "0.3" }
-wat = { version = "1.0" }
-js-component-bindgen = { version = "0.14" }
-anyhow = { version = "1.0" }
+wat = { version = "1.0", default-features = false }
+js-component-bindgen = { version = "0.14", default-features = false, features = ["transpile-bindgen"] }
+anyhow = { version = "1.0", default-features = false, features = ["std"] }
 rand_core = { version = "0.6", default-features = false }
-bytes = { version = "1.0" }
-async-trait = { version = "0.1" }
+bytes = { version = "1.0", default-features = false }
+async-trait = { version = "0.1", default-features = false }
