--- a/crates/wasm-bridge-macros/Cargo.toml
+++ b/crates/wasm-bridge-macros/Cargo.toml
@@ -12,14 +12,14 @@ categories.workspace = true
 proc-macro = true
 
 [dependencies]
-anyhow = "1.0"
-proc-macro2 = "1.0"
-quote = "1.0"
+anyhow = { workspace = true }
+proc-macro2 = { version = "1.0" }
+quote = { version = "1.0" }
 syn = { version = "2.0.25", features = ["extra-traits"] }
 wasmtime-component-util = { workspace = true }
 wasmtime-wit-bindgen = { workspace = true }
 wit-parser = { version = "0.13.0" }
-regex = "1.8"
+regex = { version = "1.8" }
 
 [features]
 async = []
