Save before "optimize memory" fork

--- a/crates/wasm-bridge-js/Cargo.toml
+++ b/crates/wasm-bridge-js/Cargo.toml
@@ -25,3 +25,4 @@ wasm-bindgen-test = { workspace = true }
 component-model = ["wasm-bridge-macros", "js-component-bindgen", "async-trait"]
 async = ["wasm-bridge-macros/async"]
 error-logging = []
+optimize = []
