--- a/crates/wasm-bridge/Cargo.toml
+++ b/crates/wasm-bridge/Cargo.toml
@@ -22,3 +22,4 @@ wat = ["wasmtime/wat", "wasm-bridge-js/wat"]
 component-model = ["wasmtime/component-model", "wasm-bridge-macros", "wasm-bridge-js/component-model"]
 async = ["wasmtime/async", "async-trait", "wasm-bridge-js/async", "wasm-bridge-macros/async"]
 error-logging = ["wasm-bridge-js/error-logging"]
+optimize = ["wasm-bridge-js/optimize"]
