--- a/tests/skeletons/wit_components/bench_js/Cargo.toml
+++ b/tests/skeletons/wit_components/bench_js/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-wasm-bridge = { path = "../../../crates/wasm-bridge", default-features = false, features = ["component-model"] }
+# wasm-bridge = { path = "../../../crates/wasm-bridge", default-features = false, features = ["component-model"] }
+wasm-bridge = { version = "0.3.0", default-features = false, features = ["component-model"] }
 
 [dev-dependencies]
 wasm-bindgen-test = { version = "0.3.37" }
