--- a/crates/wasm-bridge-macros/Cargo.toml
+++ b/crates/wasm-bridge-macros/Cargo.toml
@@ -13,6 +13,7 @@ proc-macro = true
 
 [dependencies]
 anyhow = { workspace = true }
+heck = { workspace = true }
 proc-macro2 = { version = "1.0" }
 quote = { version = "1.0" }
 syn = { version = "2.0.25", features = ["extra-traits"] }
