--- a/crates/wasm-bridge-wasi/Cargo.toml
+++ b/crates/wasm-bridge-wasi/Cargo.toml
@@ -9,6 +9,7 @@ keywords.workspace = true
 categories.workspace = true
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+wasmtime = { workspace = true }
 wasmtime-wasi = { workspace = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
