--- a/tests/skeletons/wit_components/bench_js_new/Cargo.toml
+++ b/tests/skeletons/wit_components/bench_js_new/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "wit-components-host-js"
+name = "wit-components-bench-js-new"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,3 +8,4 @@ wasm-bridge = { path = "../../../crates/wasm-bridge", default-features = false, 
 
 [dev-dependencies]
 wasm-bindgen-test = { version = "0.3.37" }
+easybench-wasm = { version = "0.2.1", path = "../../../../easybench-wasm" }
